# py-confluent-kafka-producers

./: .gitignore  README.md  pyproject.toml  sample_config.json
notebooks/: avro_producer.ipynb  datagen.py  json_sr_producer.ipynb  protobuf_producer.ipynb  stress_test_json_producer.ipynb
notebooks/schemas/: avro_all_datatypes.avsc  jsonschema_all_datatypes.json  protobuf_all_datatypes.proto  protobuf_all_datatypes_pb2.py
